--- a/index.html
+++ b/index.html
@@ -54,41 +54,43 @@
 
           <div class="featured-works">
 
-            <div class="featured-work bg-yellow">
+            <a class="featured-work bg-yellow" href="https://portfolio.ciaran.design/visible" target="_blank">
               <h2 class="featured-work-title">
-                <a href="http://Visible.vc" target="_blank">Visible.vc</a>
+                Visible.vc
               </h2>
               <p class="featured-work-desc">
                 Helping 3000 companies engage their investors through professional updates.
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
+                <span class="featured-work-link">
                   View Case Study →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/Visible.png"/>
               </div>
+            </a>
 
-            </div>
-            <div class="featured-work bg-yellow">
-              <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
+            <a class="featured-work bg-yellow" href="https://portfolio.ciaran.design/editmode" target="_blank">
+              <h2 class="featured-work-title">
+                EditMode
+              </h2>
               <p class="featured-work-desc">
                 Taking the pain out of content editing on websites and web apps.
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
+                <span class="featured-work-link">
                   View Case Study →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/EditMode.png"/>
               </div>
-            </div>
+            </a>
 
           </div>
           <br>
@@ -100,24 +102,24 @@
 
           <div class="featured-works">
 
-            <div class="featured-work bg-yellow">
-              <h2 class="featured-work-title"><a href="http://clubzap.com" target="_blank">ClubZap</a></h2>
+            <a href="https://portfolio.ciaran.design/clubzap" target="_blank" class="featured-work bg-yellow">
+              <h2 class="featured-work-title">ClubZap</h2>
               <p class="featured-work-desc">
                 Helping sports clubs manage events, payments and administration.
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/clubzap" target="_blank">
+                <span class="featured-work-link">
                   View Project →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/clubzap.png"/>
               </div>
-            </div>
+            </a>
 
-            <div class="featured-work bg-pink">
+            <a href="https://portfolio.ciaran.design/tokyomate" target="_blank" class="featured-work bg-pink">
               <h2 class="featured-work-title">
                 TokyoMate Assistant
               </h2>
@@ -126,18 +128,18 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/tokyomate" target="_blank">
+                <span class="featured-work-link">
                   View Project →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/tokyomate.png"/>
               </div>
-            </div>
+            </a>
 
 
-            <div class="featured-work bg-pink">
+            <a href="https://portfolio.ciaran.design/booksync" target="_blank" class="featured-work bg-pink">
               <h2 class="featured-work-title">
                 BookSync
               </h2>
@@ -146,34 +148,34 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/booksync" target="_blank">
+                <span class="featured-work-link">
                   View Project →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/booksync.png"/>
               </div>
-            </div>
+            </a>
 
-            <div class="featured-work bg-yellow">
+            <a href="https://portfolio.ciaran.design/orcadia" target="_blank" class="featured-work bg-yellow">
               <h2 class="featured-work-title">Orcadia</h2>
               <p class="featured-work-desc">
                 A SaaS app to gather your employees, spark new connections, and have fun together — no matter where you are.
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/orcadia" target="_blank">
+                <span class="featured-work-link">
                   View Project →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/orcadia.png"/>
               </div>
-            </div>
+            </a>
 
-            <div class="featured-work bg-blue">
+            <a href="https://portfolio.ciaran.design/housebuild" target="_blank" class="featured-work bg-blue">
               <h2 class="featured-work-title">
                 HouseBuild
               </h2>
@@ -182,38 +184,37 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/housebuild" target="_blank">
+                <span class="featured-work-link">
                   View Project →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/HouseBuild.png"/>
               </div>
+            </a>
 
-            </div>
 
-
-            <div class="featured-work bg-green">
+            <a href="https://portfolio.ciaran.design/skurt" target="_blank" class="featured-work bg-green">
               <div class="featured-work-content">
                 <h2 class="featured-work-title">
-                  <a href="http://fair.com" target="_blank">Fair</a>
+                  Fair
                 </h2>
                 <p class="featured-work-desc">
                   Designing an application for managing a fleet of vehicles.
                 </p>
 
                 <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
+                  <span class="featured-work-link">
                     Read Case Study →
-                  </a>
+                  </span>
                 </div>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/Skurt.png"/>
               </div>
-            </div>
+            </a>
 
             <div class="featured-work bg-yellow">
               <h2 class="featured-work-title">The Currency</h2>
@@ -222,9 +223,9 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link text-gray" href="">
+                <span class="featured-work-link text-gray">
                   Work in progress
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
@@ -232,7 +233,7 @@
               </div>
             </div>
 
-            <div class="featured-work bg-pink">
+            <a href="https://portfolio.ciaran.design/irevise" target="_blank" class="featured-work bg-pink">
               <h2 class="featured-work-title">
                 iRevise
               </h2>
@@ -241,43 +242,63 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/irevise" target="_blank">
+                <span class="featured-work-link">
                   View Project →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/iRevise.png"/>
               </div>
-            </div>
+            </a>
 
-            <div class="featured-work bg-pink">
+            <a href="https://talentacquisition.ie" target="_blank" class="featured-work bg-pink">
               <h2 class="featured-work-title">
-                <a href="https://talentacquisition.ie/" target="_blank">TalentAqcuisition.ie</a>
+                TalentAqcuisition.ie
               </h2>
               <p class="featured-work-desc">
                 Landing page for a remote service offering scaling businesses access to a dedicated Talent Acquisition team.
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://talentacquisition.ie" target="_blank">
+                <span class="featured-work-link">
                   View Site →
-                </a>
+                </span>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/talentacquisition.png"/>
               </div>
-            </div>
+            </a>
+
+            <a href="https://portfolio.ciaran.design/marketing-design" target="_blank" class="featured-work bg-pink">
+              <h2 class="featured-work-title">
+                Visible Marketing Design
+              </h2>
+              <p class="featured-work-desc">
+                Marketing work I designed for Visible including a marketing site, monthly campaigns and brand work.
+              </p>
+
+              <div class="featured-work-footer">
+                <span class="featured-work-link">
+                  View Project →
+                </span>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/visible-marketing.png"/>
+              </div>
+            </a>
 
           </div>
 
           <hr>
           <h3>How I Work</h3>
           <p class="grey">
-            See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">dribbble</a>,
-            read about <a href="https://portfolio.ciaran.design/how-i-work" target="_blank">how I work</a>,
-            see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.</p>
+            → See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">dribbble</a>.<br>
+            → Read about <a href="https://portfolio.ciaran.design/how-i-work" target="_blank">how I work and my process</a>.<br>
+            → See what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>.<br>
+            → Check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.</p>
           <hr>
           <h3>Connect</h3>
           <p>
